--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <fieldset>
       <nav>
         <ul>
-          <li><a href="#weather-day-column">Home</a></li>
+          <li><a href="#section-weather">Home</a></li>
           <li>News</li>
           <li>Weather</li>
           <li style="float: left">About</li>
