--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                   <!-- Day One -->
                   <div class="weather-day-column">
                     <span id="dayOneTitle" class="column-head">Day 1</span>
-                    <img src="/Weather-Project/partiallycloudy.png" />
+                    <img
+                      src="/Weather-Project/partiallycloudy.png"
+                      alt="Weather Image"
+                    />
                     <span class="temp-data">
                       <span>56</span>
                       <span>°F</span>
@@ -57,7 +60,7 @@
                   <!-- Day Two -->
                   <div class="weather-day-column">
                     <span id="dayTwoTitle" class="column-head">Day 2</span>
-                    <img src="/Weather-Project/rainy.png" />
+                    <img src="/Weather-Project/rainy.png" alt="Weather Image" />
                     <span class="temp-data">
                       <span>52</span>
                       <span>°F</span>
@@ -66,7 +69,10 @@
                   <!-- Day Three -->
                   <div class="weather-day-column">
                     <span id="dayThreeTitle" class="column-head">Day 3</span>
-                    <img src="/Weather-Project/partiallycloudy.png" />
+                    <img
+                      src="/Weather-Project/partiallycloudy.png"
+                      alt="Weather Image"
+                    />
                     <span class="temp-data">
                       <span>55</span>
                       <span>°F</span>
@@ -75,7 +81,7 @@
                   <!-- Day Four -->
                   <div class="weather-day-column">
                     <span id="dayFourTitle" class="column-head">Day 4</span>
-                    <img src="/Weather-Project/sunny.png" />
+                    <img src="/Weather-Project/sunny.png" alt="Weather Image" />
                     <span class="temp-data">
                       <span>58</span>
                       <span>°F</span>
@@ -84,7 +90,7 @@
                   <!-- Day Five -->
                   <div class="weather-day-column">
                     <span id="dayFiveTitle" class="column-head">Day 5</span>
-                    <img src="/Weather-Project/windy.png" />
+                    <img src="/Weather-Project/windy.png" alt="Weather Image" />
                     <span class="temp-data">
                       <span>58</span>
                       <span>°F</span>
@@ -97,6 +103,5 @@
         </div>
       </section>
     </main>
-    <footer></footer>
   </body>
 </html>
