--- a/index.html
+++ b/index.html
@@ -144,52 +144,54 @@
               <h2>
                 <a id="header-article"></a>
               </h2>
-              <p id="header-description">No article description.</p>
+              <p id="header-description"><a>No article description.</a></p>
             </article>
-            <article class="article">
-              <img
-                id="article-img-1"
-                src="/Weather-Project/newspaper.jfif"
-                alt="Main Article"
-              />
-              <h2>
-                <a id="article-1-header">No article header</a>
-              </h2>
-              <p id="article-1-description">No article description.</p>
-            </article>
-            <article class="article">
-              <img
-                id="article-img-2"
-                src="/Weather-Project/newspaper.jfif"
-                alt="Main Article"
-              />
-              <h2>
-                <a id="article-2-header">No article header</a>
-              </h2>
-              <p id="article-2-description">No article description.</p>
-            </article>
-            <article class="article">
-              <img
-                id="article-img-3"
-                src="/Weather-Project/newspaper.jfif"
-                alt="Main Article"
-              />
-              <h2>
-                <a id="article-3-header">No article header</a>
-              </h2>
-              <p id="article-3-description">No article description.</p>
-            </article>
-            <article class="article">
-              <img
-                id="article-img-4"
-                src="/Weather-Project/newspaper.jfif"
-                alt="Main Article"
-              />
-              <h2>
-                <a id="article-4-header">No article header</a>
-              </h2>
-              <p id="article-4-description">No article description.</p>
-            </article>
+            <div class="article-small">
+              <article class="article">
+                <img
+                  id="article-img-1"
+                  src="/Weather-Project/newspaper.jfif"
+                  alt="Main Article"
+                />
+                <h2>
+                  <a id="article-1-header">No article header</a>
+                </h2>
+                <p id="article-1-description">No article description.</p>
+              </article>
+              <article class="article">
+                <img
+                  id="article-img-2"
+                  src="/Weather-Project/newspaper.jfif"
+                  alt="Main Article"
+                />
+                <h2>
+                  <a id="article-2-header">No article header</a>
+                </h2>
+                <p id="article-2-description">No article description.</p>
+              </article>
+              <article class="article">
+                <img
+                  id="article-img-3"
+                  src="/Weather-Project/newspaper.jfif"
+                  alt="Main Article"
+                />
+                <h2>
+                  <a id="article-3-header">No article header</a>
+                </h2>
+                <p id="article-3-description">No article description.</p>
+              </article>
+              <article class="article">
+                <img
+                  id="article-img-4"
+                  src="/Weather-Project/newspaper.jfif"
+                  alt="Main Article"
+                />
+                <h2>
+                  <a id="article-4-header">No article header</a>
+                </h2>
+                <p id="article-4-description">No article description.</p>
+              </article>
+            </div>
           </div>
         </div>
       </section>
